# referral_system_fastapi

./: .env-example  .gitignore  README.md  alembic.ini  pyproject.toml  referrals fast api.postman_collection.json
alembic/: env.py
alembic/versions/: 0001_ac1bc1299df6_initial.py  0002_82ea953eb22e_initial001.py
app/: database.py  main.py
app/referral/: __init__.py  models.py  router.py  schemas.py  service.py
app/user/: models.py  router.py  schemas.py
app/user/services/: jwt_service.py  security.py  service.py
core/: settings.py
